---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Map:
  original: "{a: 1, b: 2"
  items:
    - - Ident:
          value: a
          location:
            start_byte: 1
            end_byte: 2
      - Primitive:
          original: "1"
          value:
            Int: 1
          location:
            start_byte: 4
            end_byte: 5
    - - Ident:
          value: b
          location:
            start_byte: 7
            end_byte: 8
      - Primitive:
          original: "2"
          value:
            Int: 2
          location:
            start_byte: 10
            end_byte: 11
    - - Error:
          original: "2"
          location:
            start_byte: 10
            end_byte: 11
          token: Eof
      - Error:
          original: "2"
          location:
            start_byte: 10
            end_byte: 11
          token: Eof
  location:
    start_byte: 0
    end_byte: 11
